--- a/dashboard/frontend/.gitignore
+++ b/dashboard/frontend/.gitignore
@@ -1,4 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+resumes/
+profile.json
 
 # dependencies
 /node_modules
